--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,13 +33,14 @@ num-traits = "0.2"
 paste = "1.0.11"
 serde = { version = "1.0", default-features = false, optional = true }
 blake2b_simd = "1"
+serde_arrays = { version = "0.1.0", optional = true }
 
 [features]
 default = ["reexport", "bits"]
 asm = []
 prefetch = []
 print-trace = ["ark-std/print-trace"]
-derive_serde = ["serde/derive"]
+derive_serde = ["serde/derive", "serde_arrays"]
 reexport = []
 bits = ["ff/bits"]
 
